# spear

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: ORCHESTRATION_PROMPT.md
.claude/agents/: orchestrator.md  specialists.md
.claude/blackboard/: state.json
docs/: ARCHITECTURE.md  INTEGRATION_PLAN.md  QUERY_LAYER.md  SCHEMA.md  STALWART_INTEGRATION.md
src/: error.rs  lib.rs
src/content/: mod.rs
src/query/: imap.rs  messages.rs  mod.rs
src/schema/: accounts.rs  contacts.rs  events.rs  folders.rs  messages.rs  mod.rs
